--- a/heatdesign.html
+++ b/heatdesign.html
@@ -45,7 +45,12 @@
                                 <img src="images/pillbottle2.png" alt="pill bottle design" class="bottle2-img">
                             </div> -->
                             <p>Following the individual design configuration, I worked in a team of 4 to propose the optimal configuration in a formal report based on the attempt to minimize heat surface area (capital cost), while maintaining a suitable pressure drop (operating cost). 
-                            <p>The report covered the following: executive summary, background information, design method & analysis, TEMA specification sheet for the final configuration, and sample calculations.</p>
+                            <p>The report covered the following: 
+                            <li> Executive Summary
+                            <li> Background Information
+                            <li> Design Method & Analysis
+                            <li> TEMA Specification Sheet for Final Configuration
+                            <li> Sample Calculations</p>
                     </article>
             </section>    
         </main>   
