--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
                             <p>Hey there! My name is <strong><a href="https://vishakaas.github.io/">Vishakaa Satheeshkumar 🙋🏽‍♀️</a></strong></p> 
                             <p>I'm a fourth year Chemical Engineering student at <strong><a href="https://www.ryerson.ca/chemical/">Ryerson University 👩🏽‍🔬📚</a></strong></p>
                             <p>Currently, I'm completing my summmer co-op placement at <strong><a href="https://www.creationtech.com"> Creation Technologies </a></strong> in <strong>Manufacturing Engineering Support ⚙️</strong></p>
-                            <p>Here, I'm working alongside several Test & Process Engineers to develop or revise: 
+                            <p>Here, I'm working alongside several Test & Process Engineers to develop and revise: 
                                 <li> Process Validation Plans and Commissioning Reports (IQ, OQ, PQ) for new and pre-existing engineering equipment (e.g., torque meters, laser marker, robotic soldering)
                                 <li> Process Qualification Records for incoming chemicals (e.g., solder paste)
                                 <li> Engineering controlled documentation to implement for use in production (i.e., updating work instructions)
