--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                             <strong>Software:</strong> Microsoft Office Suite (Word, PowerPoint, Excel, Outlook, Teams), Google Suite (Docs, Sheets, Slides, Meets), Notion, Trello, MATLAB, AutoCAD <br>
                             <strong>Training:</strong> WHMIS, EHS, GMP, OHS, GLP, Chemical Safety
                             </p>
-                            <p>Currently, I'm seeking a 4 or 8-month co-op opportunities within the process field from <strong>January to August 2022 🔍</strong></p>
+                            <p>Currently, I'm seeking a 4 or 8-month co-op opportunity within the process field from <strong>January to August 2022 🔍</strong></p>
                             <p>If you find that my qualifications meet your requirements for an available position, feel free to send me a message <strong><a href="contact.html">here</a></strong> or connect with me on LinkedIn! 📨</p>
                     </article>
             </section>    
