--- a/about.html
+++ b/about.html
@@ -48,8 +48,9 @@
                                 </li>
                             <!--<img src="images/chem.png" alt="chemical engineering" class="box-img>-->
                             <p>Below is a summary of my current areas of expertise, which is frequently updated, as I <em>constantly</em> look for ways to better myself:</p>
-                            <p><strong>Courses:</strong> Lean Six Sigma Foundations, Project Management Foundations, PivotTables, Macros, VBA, AutoCAD Essentials<br>
+                            <p><strong>Courses:</strong> Lean Six Sigma Foundations, Project Management Foundations, AutoCAD Essentials<br>
                             <strong>Software:</strong> Microsoft Office Suite (Word, PowerPoint, Excel, Outlook, Teams), Google Suite (Docs, Sheets, Slides, Meets), Notion, Trello, MATLAB, AutoCAD <br>
+                            <strong>Advanced Software Skills: PivotTables, Macros, VBA
                             <strong>Training:</strong> WHMIS, EHS, GMP, OHS, GLP, Chemical Safety
                             </p>
                             <p>Currently, I'm seeking a 4 or 8-month co-op opportunity within the process field from <strong>January to August 2022 🔍</strong></p>
