--- a/aod.html
+++ b/aod.html
@@ -43,7 +43,7 @@
                         <img src="images/aod logo.png" alt="accessibility on demand logo" class="logo-img">
                         <img src="images/classroom.png" alt="classroom design" class="classroom-img">
                     </div>
-                    <p>The final design was analyzed and summarized in a design report which included:
+                    <p>The final design was analyzed and summarized in a formal report which included:
                     <li> User/Design Impacts
                     <li> Ethical Impacts
                     <li> Political Impacts
