--- a/pillbuzz.html
+++ b/pillbuzz.html
@@ -42,7 +42,29 @@
                                 <img src="images/pillbottle1.png" alt="pill bottle design" class="bottle1-img">
                                 <img src="images/pillbottle2.png" alt="pill bottle design" class="bottle2-img">
                             </div>
-                            <p>The bill of materials, evaluation (durability, sustainability, user experience, performance, profitability, affordability & accessibility, and public good), and redesign (method, cost, portability, range of use, simplicity, power consumption, and marketing) were thoroughly researched to decide upon the final design.</p>
+                            <p> The final design was implemented in a design report that included:
+                            <li> Bill of Materials
+                            <li> Evaluation
+                                <ul>
+                                    <li> Durability
+                                    <li> Sustainability
+                                    <li> User Experience
+                                    <li> Performance
+                                    <li> Profitability
+                                    <li> Affordability
+                                    <li> Accessibility
+                                    <li> Public Good)
+                                </ul>
+                            <li> Redesign
+                                <ul>
+                                    <li> Method
+                                    <li> Cost
+                                    <li> Portability
+                                    <li> Range of Use
+                                    <li> Simplicity
+                                    <li> Power Consumption
+                                    <li> Marketing)
+                                </ul></p>
                             <p><em>Our group received 97% on the final project.</em></p>
                     </article>
             </section>    
