--- a/pillbuzz.html
+++ b/pillbuzz.html
@@ -53,7 +53,7 @@
                                     <li> Profitability
                                     <li> Affordability
                                     <li> Accessibility
-                                    <li> Public Good)
+                                    <li> Public Good
                                 </ul>
                             <li> Redesign
                                 <ul>
