--- a/pillbuzz.html
+++ b/pillbuzz.html
@@ -46,24 +46,24 @@
                             <li> Bill of Materials
                             <li> Evaluation
                                 <ul>
-                                    <li> Durability
-                                    <li> Sustainability
-                                    <li> User Experience
-                                    <li> Performance
-                                    <li> Profitability
-                                    <li> Affordability
-                                    <li> Accessibility
-                                    <li> Public Good
+                                    <li> Durability </li>
+                                    <li> Sustainability </li>
+                                    <li> User Experience </li>
+                                    <li> Performance </li>
+                                    <li> Profitability </li>
+                                    <li> Affordability </li>
+                                    <li> Accessibility </li>
+                                    <li> Public Good </li>
                                 </ul>
                             <li> Redesign
                                 <ul>
-                                    <li> Method
-                                    <li> Cost
-                                    <li> Portability
-                                    <li> Range of Use
-                                    <li> Simplicity
-                                    <li> Power Consumption
-                                    <li> Marketing)
+                                    <li> Method </li>
+                                    <li> Cost </li>
+                                    <li> Portability </li>
+                                    <li> Range of Use </li>
+                                    <li> Simplicity </li>
+                                    <li> Power Consumption </li>
+                                    <li> Marketing </li>
                                 </ul></p>
                             <p><em>Our group received 97% on the final project.</em></p>
                     </article>
