--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <!--Main Area of the Page-->
     <main>
             <div class="box">
-                <img src="images/IMG_4476 2.JPG" alt="Vishakaa Satheeshkumar" class="box-img">
+                <img src="images/IMG_3120.JPG" alt="Vishakaa Satheeshkumar" class="box-img">
                 <h1>Vishakaa Satheeshkumar</h1>
                 <h5>Chemical Engineering Student</h5>
                 <i class="fa fa-map-marker" style="font-size:20px"></i><h6> Toronto, ON</h6>
