--- a/about.html
+++ b/about.html
@@ -46,6 +46,7 @@
                                 <li> Engineering controlled documentation to implement for use in production (i.e., updating work instructions)
                                 <li> Engineering Change Order for product design via Windchill platform
                                 </li>
+                                <li style="margin-top:-20px;">
                             <!--<img src="images/chem.png" alt="chemical engineering" class="box-img>-->
                             <p>Below is a summary of my current areas of expertise, which is frequently updated, as I <em>constantly</em> look for ways to better myself:</p>
                             <p><strong>Courses:</strong> Lean Six Sigma Foundations, Project Management Foundations, AutoCAD Essentials<br>
