--- a/about.html
+++ b/about.html
@@ -41,8 +41,7 @@
                             <p>I'm a fourth year Chemical Engineering student at <strong><a href="https://www.ryerson.ca/chemical/">Ryerson University 👩🏽‍🔬📚</a></strong></p>
                             <p>Currently, I'm completing my summmer co-op placement at <strong><a href="https://www.creationtech.com"> Creation Technologies </a></strong> in <strong>Manufacturing Engineering Support ⚙️</strong></p>
                             <p>Here, I'm working alongside several Test & Process Engineers to develop and revise: 
-                                <li style="margin-top:-20px;">
-                                <li> Process Validation Plans and Commissioning Reports (IQ, OQ, PQ) for new and pre-existing engineering equipment (e.g., torque meters, laser marker, robotic soldering)
+                                <li style="margin-top:-10px;"> Process Validation Plans and Commissioning Reports (IQ, OQ, PQ) for new and pre-existing engineering equipment (e.g., torque meters, laser marker, robotic soldering)
                                 <li> Process Qualification Records for incoming chemicals (e.g., solder paste)
                                 <li> Engineering controlled documentation to implement for use in production (i.e., updating work instructions)
                                 <li> Engineering Change Order for product design via Windchill platform
