--- a/heatdesign.html
+++ b/heatdesign.html
@@ -46,7 +46,7 @@
                             </div> -->
                             <p>Following the individual design configuration, I worked in a team of 4 to propose the optimal configuration in a formal report based on the attempt to minimize heat surface area (capital cost), while maintaining a suitable pressure drop (operating cost). 
                             <p>The report covered the following: 
-                            <li> Executive Summary
+                            <li style="margin-top:-10px;"> Executive Summary
                             <li> Background Information
                             <li> Design Method & Analysis
                             <li> TEMA Specification Sheet for Final Configuration
