--- a/aod.html
+++ b/aod.html
@@ -44,7 +44,7 @@
                         <img src="images/classroom.png" alt="classroom design" class="classroom-img">
                     </div>
                     <p>The final design was analyzed and summarized in a formal report which included:
-                    <li> User/Design Impacts
+                    <li style="margin-top:-10px;"> User/Design Impacts
                     <li> Ethical Impacts
                     <li> Political Impacts
                     <li> Cultural Impacts
