--- a/pillbuzz.html
+++ b/pillbuzz.html
@@ -45,8 +45,8 @@
                             <p> The final design was implemented in a design report that included:
                             <li> Bill of Materials
                             <li> Evaluation
-                                <ul>
-                                    <li> Durability </li>
+                                <ul style="margin-top:-10px;">
+                                    <li style="margin-top:-10px;"> Durability </li>
                                     <li> Sustainability </li>
                                     <li> User Experience </li>
                                     <li> Performance </li>
