--- a/pillbuzz.html
+++ b/pillbuzz.html
@@ -46,7 +46,7 @@
                             <li> Bill of Materials
                             <li> Evaluation
                                 <ul style="margin-top:-10px;">
-                                    <li style="margin-top:-10px;"> Durability </li>
+                                    <li> Durability </li>
                                     <li> Sustainability </li>
                                     <li> User Experience </li>
                                     <li> Performance </li>
