--- a/pillbuzz.html
+++ b/pillbuzz.html
@@ -45,8 +45,8 @@
                             <p> The final design was implemented in a design report that included:
                             <li> Bill of Materials
                             <li> Evaluation
-                                <ul style="margin-top:-10px;">
-                                    <li> Durability </li>
+                                <ul>
+                                    <li style="margin-top:-10px;" Durability </li>
                                     <li> Sustainability </li>
                                     <li> User Experience </li>
                                     <li> Performance </li>
@@ -57,7 +57,7 @@
                                 </ul>
                             <li> Redesign
                                 <ul>
-                                    <li> Method </li>
+                                    <li style="margin-top:-10px;" Method </li>
                                     <li> Cost </li>
                                     <li> Portability </li>
                                     <li> Range of Use </li>
