--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
             <section>
                     <article id="description">
                         <h2>About Me</h2>
-                            <p>Hey there! My name is <strong><a href="https://vishakaas.github.io/">Vishakaa Satheeshkumar 🙋🏽‍♀️</a></strong></p> 
+                            <p>Hey there! My name is Vishakaa 🙋🏽‍♀️</p> 
                             <p>I'm a fourth year Chemical Engineering student at <strong><a href="https://www.ryerson.ca/chemical/">Ryerson University 👩🏽‍🔬📚</a></strong></p>
                             <p>Currently, I'm completing my summmer co-op placement at <strong><a href="https://www.creationtech.com"> Creation Technologies </a></strong> in <strong>Manufacturing Engineering Support ⚙️</strong></p>
                             <p>Here, I'm working alongside several Test & Process Engineers to develop and revise: 
