--- a/pillbuzz.html
+++ b/pillbuzz.html
@@ -46,7 +46,7 @@
                             <li> Bill of Materials
                             <li> Evaluation
                                 <ul>
-                                    <li style="margin-top:-5px;" Durability </li>
+                                    <li style="margin-top:-5px;"> Durability </li>
                                     <li> Sustainability </li>
                                     <li> User Experience </li>
                                     <li> Performance </li>
@@ -57,7 +57,7 @@
                                 </ul>
                             <li> Redesign
                                 <ul>
-                                    <li style="margin-top:-10px;" Method </li>
+                                    <li style="margin-top:-10px;"> Method </li>
                                     <li> Cost </li>
                                     <li> Portability </li>
                                     <li> Range of Use </li>
