--- a/pillbuzz.html
+++ b/pillbuzz.html
@@ -47,23 +47,23 @@
                             <li> Evaluation
                                 <ul>
                                     <li style="margin-top:-5px;"> Durability </li>
-                                    <li> Sustainability </li>
+                                    <li><i> Sustainability </li>
                                     <li> User Experience </li>
                                     <li> Performance </li>
                                     <li> Profitability </li>
                                     <li> Affordability </li>
                                     <li> Accessibility </li>
-                                    <li> Public Good </li>
+                                    <li> Public Good </i></li>
                                 </ul>
                             <li> Redesign
                                 <ul>
-                                    <li style="margin-top:-10px;"> Method </li>
+                                    <li style="margin-top:-10px;"><i> Method </li>
                                     <li> Cost </li>
                                     <li> Portability </li>
                                     <li> Range of Use </li>
                                     <li> Simplicity </li>
                                     <li> Power Consumption </li>
-                                    <li> Marketing </li>
+                                    <li> Marketing </i></li>
                                 </ul></p>
                             <p><em>Our group received 97% on the final project.</em></p>
                     </article>
