--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                         <h2>About Me</h2>
                             <p>Hey there! My name is Vishakaa 🙋🏽‍♀️</p> 
                             <p>I'm a fourth year Chemical Engineering student at <strong>Ryerson University 👩🏽‍🔬📚</strong></p>
-                            <p>Currently, I'm completing my summmer co-op placement at <strong>Creation Technologies</strong> in <strong>Manufacturing Engineering Support ⚙️</strong></p>
+                            <p>Currently, I'm completing my summer co-op placement at <strong>Creation Technologies</strong> in <strong>Manufacturing Engineering Support ⚙️</strong></p>
                             <p>Here, I'm working alongside several Test & Process Engineers to develop and revise: 
                                 <li style="margin-top:-10px;"> Process Validation Plans and Commissioning Reports (IQ, OQ, PQ) for new and pre-existing engineering equipment (e.g., torque meters, laser marker, robotic soldering)
                                 <li> Process Qualification Records for incoming chemicals (e.g., solder paste)
