--- a/pillbuzz.html
+++ b/pillbuzz.html
@@ -46,8 +46,8 @@
                             <li> Bill of Materials
                             <li> Evaluation
                                 <ul>
-                                    <li style="margin-top:-5px;"> Durability </li>
-                                    <li><i> Sustainability </li>
+                                    <li style="margin-top:-5px;"><i> Durability </li>
+                                    <li> Sustainability </li>
                                     <li> User Experience </li>
                                     <li> Performance </li>
                                     <li> Profitability </li>
