--- a/bioeng.html
+++ b/bioeng.html
@@ -40,7 +40,9 @@
                             <p> I worked in a team of 4 to complete the project through the following 3 phases:
                             <li style="margin-top:-10px;"> Conducting preliminary research for a literature survey to determine the feasibility of the topic
                             <li> Designing an e-Poster to summarize findings efficiently by utilizing the graphic tools included in Microsoft PowerPoint to create process diagrams and flowcharts
-                            <li> Preparing a final report on the background of lactic acid fermentation, relevant upstream process routes, downstream operations, industrial applications, benefits, and summary of findings.
+                            <ul>
+                                <li style="margin-top:-10px;"> Preparing a final report on the background of lactic acid fermentation, relevant upstream process routes, downstream operations, industrial applications, benefits, and summary of findings.
+                            </ul>
                             </li>
                             </p>
                             <!--<div class="container">
