--- a/bioeng.html
+++ b/bioeng.html
@@ -49,7 +49,7 @@
                                 <img src="images/pillbottle1.png" alt="pill bottle design" class="bottle1-img">
                                 <img src="images/pillbottle2.png" alt="pill bottle design" class="bottle2-img">
                             </div>-->
-                            <p><em>Our group received 93% on the final project.</em></p>
+                            <p><em><strong>Our group received 93% on the final project.</em></strong></p>
                     </article>
             </section>    
         </main>   
