--- a/aod.html
+++ b/aod.html
@@ -50,7 +50,7 @@
                     <li> Cultural Impacts
                     <li> Business Impacts
                     <li> Final Work Plan (Gantt Chart)</p>
-                    <p><em>Our final RFP was selected to be incorporated into an ongoing accessible classroom plan within Ryerson's Centre for Excellence in Teaching and Learning.</em></p>
+                    <p><em><strong>Our final RFP was selected to be incorporated into an ongoing accessible classroom plan within Ryerson's Centre for Excellence in Teaching and Learning.</em></strong></p>
                 </article>
             </section>
         </main>
