--- a/heatdesign.html
+++ b/heatdesign.html
@@ -39,7 +39,7 @@
                         <p><strong>Objective:</strong> Research and design a heat exchanger that is viable to operate in a high volume chemical plant with a production rate of 20,000 to 200,000 tonnes/year.</p>
                             <p>I designed a 2-8 shell-and-tube heat exchanger using an iterative approach on Microsoft Excel to determine the unknown dimensions with the provided operating conditions and heuristics. 
                                 The dimensions were varied based on a trial and error procedure, so that the calculated overall heat transfer coefficient converges within ± 5% of the initial estimate. <br>
-                            <p><em>I received 94% on the individual portion of the project.</em></p>
+                            <p><em><strong>I received 94% on the individual portion of the project.</em></strong></p>
                             <!--<div class="container">
                                 <img src="images/pillbottle1.png" alt="pill bottle design" class="bottle1-img">
                                 <img src="images/pillbottle2.png" alt="pill bottle design" class="bottle2-img">
