--- a/pillbuzz.html
+++ b/pillbuzz.html
@@ -65,7 +65,7 @@
                                     <li> Power Consumption </li>
                                     <li> Marketing </i></li>
                                 </ul></p>
-                            <p><em>Our group received 97% on the final project.</em></p>
+                            <p><em><strong>Our group received 97% on the final project.</em></strong></p>
                     </article>
             </section>    
         </main>   
