--- a/bioeng.html
+++ b/bioeng.html
@@ -38,12 +38,17 @@
                         <h2>Lactic Acid Fermentation</h2>
                             <p><Strong>Objective:</strong> Research a product manufactured in the bioprocessing industry that uses enzymes or cells. </p> 
                             <p> I worked in a team of 4 to complete the project through the following 3 phases:
-                            <li style="margin-top:-10px;"> Conducting preliminary research for a literature survey to determine the feasibility of the topic
-                            <li> Designing an e-Poster to summarize findings efficiently by utilizing the graphic tools included in Microsoft PowerPoint to create process diagrams and flowcharts
+                            <li style="margin-top:-10px;"> Conducting preliminary research for a literature survey to determine the feasibility of the topic</li>
+                            <li> Designing an e-Poster to summarize findings efficiently by utilizing the graphic tools included in Microsoft PowerPoint to create process diagrams and flowcharts </li>
+                            <li> Preparing a final report through reserach of the following areas:</li>
                             <ul>
-                                <li style="margin-top:-10px;"> Preparing a final report on the background of lactic acid fermentation, relevant upstream process routes, downstream operations, industrial applications, benefits, and summary of findings.
+                                <li style="margin-top:-10px;"><i> Background of Lactic Acid Fermentation </li>
+                                <li> Upstream Process Routes </li>
+                                <li> Downstream Operations </li>
+                                <li> Industrial Applications </li>
+                                <li> Benefits </li>
+                                <li> Summary of Findings </i><li>
                             </ul>
-                            </li>
                             </p>
                             <!--<div class="container">
                                 <img src="images/pillbottle1.png" alt="pill bottle design" class="bottle1-img">
