--- a/bioeng.html
+++ b/bioeng.html
@@ -47,7 +47,7 @@
                                 <li> Downstream Operations </li>
                                 <li> Industrial Applications </li>
                                 <li> Benefits </li>
-                                <li> Summary of Findings </i><li>
+                                <li> Summary of Findings </i></li>
                             </ul>
                             </p>
                             <!--<div class="container">
