--- a/about.html
+++ b/about.html
@@ -47,14 +47,14 @@
                                 <li> Engineering Change Order for product design via Windchill platform
                                 </li>
                             <!--<img src="images/chem.png" alt="chemical engineering" class="box-img>-->
-                            <p>Below is a summary of my current areas of expertise, which is frequently updated, as I <em>constantly</em> look for ways to better myself:</p>
+                            <p>Below are my current areas of expertise:</p>
                             <p><strong>Courses:</strong> Lean Six Sigma Foundations, Project Management Foundations, AutoCAD Essentials<br>
                             <strong>Software:</strong> Microsoft Office Suite (Word, PowerPoint, Excel, Outlook, Teams), Google Suite (Docs, Sheets, Slides, Meets), Notion, Trello, MATLAB, AutoCAD <br>
-                            <strong>Advanced Software Skills:</strong> PivotTables, Macros, VBA <br>
+                            <strong>Advanced Software Skills:</strong> Pivot Tables & Charts, Macros, VBA <br>
                             <strong>Training:</strong> WHMIS, EHS, GMP, OHS, GLP, Chemical Safety
                             </p>
                             <p>Currently, I'm seeking a 4 or 8-month co-op opportunity within the process field from <strong>January to August 2022 🔍</strong></p>
-                            <p>If you find that my qualifications meet your requirements for an available position, feel free to send me a message <strong><a href="contact.html">here</a></strong> or connect with me on LinkedIn! 📨</p>
+                            <p>If you find that my qualifications are best fit for an ideal position, feel free to send me a message or connect with me on LinkedIn! 📨</p>
                     </article>
             </section>    
         </main>
