--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
                                 </li>
                             <!--<img src="images/chem.png" alt="chemical engineering" class="box-img>-->
                             <p>Below are my current areas of expertise:</p>
-                            <p><strong>Courses:</strong> Lean Six Sigma Foundations, Project Management Foundations, AutoCAD Essentials<br>
+                            <p><strong>Courses:</strong> Process Improvement Foundations, Lean Six Sigma Foundations, Project Management Foundations, AutoCAD Essentials<br>
                             <strong>Software:</strong> Microsoft Office Suite (Word, PowerPoint, Excel, Outlook, Teams), Google Suite (Docs, Sheets, Slides, Meets), Notion, Trello, MATLAB, AutoCAD <br>
                             <strong>Advanced Software Skills:</strong> Pivot Tables & Charts, Macros, VBA, Conditional Formatting <br>
                             <strong>Training:</strong> WHMIS, EHS, GMP, OHS, GLP, Chemical Safety
