--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
                             <p>Below are my current areas of expertise:</p>
                             <p><strong>Courses:</strong> Process Improvement Foundations, Lean Six Sigma Foundations, Project Management Foundations, AutoCAD Essentials<br>
                             <strong>Software:</strong> Microsoft Office Suite (Word, PowerPoint, Excel, Outlook, Teams), Google Suite (Docs, Sheets, Slides, Meets), Notion, Trello, MATLAB, AutoCAD <br>
-                            <strong>Advanced Software Skills:</strong> Pivot Tables & Charts, Macros, VBA, Conditional Formatting, Functions (VLOOKUP, CONCAT, TRANSPOSE, INDEX, FLASH FILL) <br>
+                            <strong>Advanced Software Skills:</strong> Pivot Tables & Charts, Macros, VBA, Conditional Formatting, Functions (VLOOKUP, CONCAT, TRANSPOSE, INDEX, SUMIF) <br>
                             <strong>Training:</strong> WHMIS, EHS, GMP, OHS, GLP, Chemical Safety
                             </p>
                             <p>Currently, I'm seeking a 4 or 8-month co-op opportunity within the process field from <strong>January to August 2022 🔍</strong></p>
