--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                             <strong>Advanced Software Skills:</strong> Pivot Tables & Charts, Macros, VBA, Conditional Formatting, Functions (VLOOKUP, CONCAT, TRANSPOSE, INDEX, SUMIF) <br>
                             <strong>Training:</strong> WHMIS, EHS, GMP, OHS, GLP, Chemical Safety
                             </p>
-                            <p>Currently, I'm seeking a 4 or 8-month co-op opportunity within the process field from <strong>January to August 2022 🔍</strong></p>
+                            <p>For my next co-op term, I'm seeking a 4 or 8-month co-op opportunity in process improvement from <strong>January to August 2022 🔍</strong></p>
                             <p>If you find that my qualifications are best fit for an ideal position, feel free to send me a message or connect with me on LinkedIn! 📨</p>
                     </article>
             </section>    
