--- a/bioeng.html
+++ b/bioeng.html
@@ -40,7 +40,7 @@
                             <p> I worked in a team of 4 to complete the project through the following 3 phases:
                             <li style="margin-top:-10px;"> Conducting preliminary research for a literature survey to determine the feasibility of the topic </li>
                             <li> Designing an e-Poster to summarize findings efficiently by utilizing the graphic tools included in Microsoft PowerPoint to create process diagrams and flowcharts </li>
-                            <li> Preparing a final report through reserach of the following areas: </li>
+                            <li> Preparing a final report through research of the following areas: </li>
                             <ul>
                                 <li style="margin-top:-10px;"><i> Background of Lactic Acid Fermentation </li>
                                 <li> Upstream Process Routes </li>
